# Photonintelligencelite

./: .env.example  .gitignore  .vercelignore  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.bat  stop.bat  test_out.txt  vercel.json
.github/workflows/: ci.yml
analytics/: __init__.py
analytics/algorithms/: __init__.py  box_plot.py  clipping_current.py  kpis.py  (+5 more)
api/: keepalive.js
backend/: Dockerfile
docs/: AUTH.md  COMPLETE_DATA_FORMAT.md  PRD.md  RCA_COLUMN_DETECTION.md  UAT_FINAL.md  UAT_FINDINGS.md  algorithm_parity.md  architecture_decisions.md  deployment.md
frontend/: .env.example  .eslintrc.cjs  .vercelignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: benchmark_ingest.py  check_template_sync.py  deploy-cloud.ps1  ensure_local_db.py  launch_local.py  start_local_postgres.py
tests/: conftest.py  test_algorithm_parity.py  test_architecture_and_prerequisites.py  test_auth.py  test_clipping_current.py  test_clipping_power.py  test_column_detection_rca.py  test_complete_analysis_pack.py  test_disconnected_strings.py  test_excel_wide_inverter.py  test_inverter_efficiency_and_box_plot.py  test_kpis.py  test_module_damage.py  test_multi_scada_merge.py  test_orchestrator.py  test_pdf_builder.py  test_plant_structure.py  test_standardize.py  test_string_outlier.py  test_synthetic_generator.py  test_timestamp_recovery.py  test_validation.py
uat-artifacts/: uat-final.json  uat-issues.json  uat-issues.md
(+149 files in other folders)
