[project]
name = "pic-lite"
version = "0.1.0"
description = "Photon Intelligence Center Lite — transient solar SCADA analytics platform"
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
